<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainVendedor">




    <item
        android:id="@+id/stockbutton"
        android:title="@string/stock"
        android:icon="@drawable/stocklogo"
        app:showAsAction="always"
        />



    <item
        android:id="@+id/incoming"
        android:title="@string/incoming"
        android:icon="@drawable/pedin"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/pedidosEnviados"
        android:title="@string/pedidosrealizados"
        android:icon="@drawable/pedout"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logouticon"
        app:showAsAction="always"
        />
</menu>