<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A0CA3">

    <View
        android:id="@+id/viewArticle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#4CC8EF"
        android:clickable="true"
        android:contentDescription="@string/stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/place_holder"
        android:textColor="#3A0CA3"
        android:textSize="24sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewArticle" />

    <Button
        android:id="@+id/botonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="25dp"
        android:onClick="incrementarCantidadArticulo"
        android:text="ADD"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/quantity"
        android:textColor="#3A0CA3"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewArticle"
        app:layout_constraintTop_toBottomOf="@id/textViewArticle" />

    <TextView
        android:id="@+id/textViewQuantityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/place_holder"
        android:textColor="#3A0CA3"

        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewQuantity"
        app:layout_constraintTop_toBottomOf="@id/textViewArticle" />
</androidx.constraintlayout.widget.ConstraintLayout>